syntax="proto2";

package cache;

message SignCache
{
	required int32 year_month = 1;
	required int32 count = 2;
	required int32 day_index = 3;
}